fixes for google map visibility issue in mobile devices

--- a/src/app/map/destinique-map/destinique-map.component.scss
+++ b/src/app/map/destinique-map/destinique-map.component.scss
@@ -112,7 +112,12 @@ label {
 }
 @media all and (max-width: 768px) {
     .location-locator-search-map {
-        display: none;
+        position: relative;
+        top: auto;
+        right: auto;
+        width: 100%;
+        max-width: 100%;
+        margin-bottom: $spacing-md;
     }
 }
 
